Refactored SET command to follow the new CompareCondition style used for the DELEX command.
Signed-off-by: Yordan Tsintsov <yordan.tsintsov@redis.com>